# HeadPosePnP

./: .gitignore  CMakeLists.txt  HeadPose.cpp  OGL_OCV_common.cpp  OGL_OCV_common.h  README.md  glm.cpp  glm.h  stdafx.cpp  stdafx.h
Angelina_Jolie/: Angelina_Jolie_0001.txt  Angelina_Jolie_0002.txt  Angelina_Jolie_0003.txt  Angelina_Jolie_0004.txt  Angelina_Jolie_0005.txt  Angelina_Jolie_0006.txt  Angelina_Jolie_0007.txt  Angelina_Jolie_0008.txt  Angelina_Jolie_0009.txt  Angelina_Jolie_0010.txt  Angelina_Jolie_0011.txt  Angelina_Jolie_0012.txt  Angelina_Jolie_0013.txt  Angelina_Jolie_0014.txt  Angelina_Jolie_0015.txt  Angelina_Jolie_0016.txt  Angelina_Jolie_0017.txt  Angelina_Jolie_0018.txt  Angelina_Jolie_0019.txt  Angelina_Jolie_0020.txt
